--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "public/*"
   ],
   "dependencies": {
+    "@sweetalert2/themes": "4.0.5",
     "m2d2": "^1.3.6",
-    "sweetalert2": "^9.7.2"
+    "sweetalert2": "^9.17.2"
   },
   "main": "gulpfile.js",
   "devDependencies": {
@@ -26,7 +27,8 @@
     "gulpfile.js": "^3.2.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npx npm-force-resolutions"
   },
   "author": "Josaped Moreno",
   "license": "CopyRight"
